update to version 0.9.0 ready for alpha testing

--- a/css/template-builder.css
+++ b/css/template-builder.css
@@ -200,8 +200,10 @@
     overflow: auto;
 }
 
-#navModal .preview .nav {
+#navModal .preview .nav,
+#navModal #element .nav {
     float: none;
+	margin: 0;
 }
 
 #contentModal textarea {
